# enrichment_models

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
datasets/: 100_labeled_consumer_transactions.csv  benchmark_predictions.csv  benchmark_results.csv
enrichment_models/: __init__.py
enrichment_models/llms/: llama.py  llm.py  openai.py  prompter.py  utils.py
enrichment_models/llms/prompt_templates/: t5.json
enrichment_models/tasks/: llm_wrapper.py
enrichment_models/tasks/labeler/: hierarchy.py  ntropy_wrapper.py  prompter.py  utils.py
enrichment_models/tasks/normalizer/: ntropy_wrapper.py  prompter.py  utils.py
notebooks/: llama.ipynb  ntropy.ipynb  openai.ipynb
scripts/: full_benchmark.py
tests/integration/: test_openai.py
tests/unittests/: test_prompts_labeler_llm.py  test_prompts_normalizer_llm.py
