[tool.poetry]
name = "enrichment-models"
version = "0.1.0"
description = ""
authors = ["louisoutin <louis.outin@gmail.com>"]
readme = "README.md"
packages = [{include = "enrichment_models"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
openai = "^0.27.0"
numpy = "^1.24.2"
sentence-transformers = "^2.2.2"
ntropy-sdk = "^4.16.0"
tqdm = "^4.64.1"
scikit-learn = "^1.2.1"
seqeval = "^1.2.2"
langchain = "^0.0.101"
accelerate = "^0.19.0"
bitsandbytes = "^0.37.0"
rapidfuzz = "^3.0.0"
transformers = "^4.29.2"
peft = "^0.3.0"
torch = "^1.12.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.0.1"
notebook = "^6.5.2"
pytest = "^7.2.1"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
